fixed menu alignment

--- a/sites/all/themes/idocmedia/scss/custom.scss
+++ b/sites/all/themes/idocmedia/scss/custom.scss
@@ -138,6 +138,15 @@ h2{
 	}
 
 }
+.l-whatmenu-region{
+	&.row{
+		object{
+			width: 20%;
+			float:left;
+		}
+
+	}
+	}
 .l-brickland-region{
 	&.row{
 		max-width: 100%;
